--- a/Cafe.css
+++ b/Cafe.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Emilys+Candy&family=Kaushan+Script&family=Nosifer&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap');
 
 :root{
---photo-blue:#6DC7D1;
+--photo-blue:#00a6fb;;
 --platinum:#E2F3F4;
 --quick-silver: hsla(0, 0%, 65%, 1);
 --davys-grey: hsla(30, 3%, 34%, 1);
 --smoky-black-1: hsla(40, 12%, 5%, 1);
 --smoky-black-2: hsla(30, 8%, 5%, 1);
 --smoky-black-3: hsla(0, 3%, 7%, 1);
---eerie-black-1: hsla(210, 4%, 9%, 1);
+--eerie-black-1: #051923;
 --eerie-black-2: hsla(210, 4%, 11%, 1);
 --eerie-black-3: hsla(180, 2%, 8%, 1);
 --eerie-black-4: hsla(0, 0%, 13%, 1);
@@ -197,7 +197,6 @@ body.nav-active{
     height: 7px;
     border: 1px solid var(--photo-blue);
     transform: rotate(45deg);
-    /* background-color: var(--photo-blue); */
 }
 .contact-label{
     font-weight: var(--weight-bold);
@@ -248,7 +247,6 @@ body.nav-active{
     margin-block-end: 12px;
 }
 .section-subtitle::after{
-    content:url(images/separator.svg);
     display: block;
     width: 100px;
     margin-inline:auto;
@@ -321,71 +319,6 @@ body.nav-active{
     position: absolute;
 }
 
-/* Preloader */
-.preload{
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: var(--photo-blue);
-    z-index:10;
-    display: grid;
-    place-content: center;
-    justify-items: center;
-    transition: var(--transition-2);
-}
-
-.preload > * {
-    transition: var(--transition-1);
-}
-.preload.loaded > * {
-    opacity:0;
-}
-.preload.loaded {
-    transition-delay: 250ms;
-    transform: translateY(100%);
-}
-.circle{
-    width: 112px;
-    height: 112px;
-    border-radius: var(--radius-circle);
-    border:3px solid var(--white);
-    border-block-start-color: var(--smoky-black-3);
-    margin-block-end: 45px;
-    animation: rotate360 1s linear infinite;
-}
-@keyframes rotate360{
-    0%{
-        transform: rotate(0);
-    }
-    100%{
-        transform: rotate(1turn);
-    }
-}
-.preload .text{
-    background-image: var(--loading-text-gradient);
-    background-size: 600%;
-    font-size: calc(2rem + 3vw);
-    font-weight: var(--weight-bold);
-    line-height: 1em;
-    text-transform: uppercase;
-    letter-spacing: 16px;
-    padding-inline-start: 16px;
-    -webkit-text-fill-color:transparent;
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-stroke: 0px var(--eerie-black-3);
-    animation: loadingText linear 1.5s infinite;
-}
-@keyframes loadingText{
-    0%{
-        background-position: 100%;
-    }
-    100%{
-        background-position:0%;
-    }
-}
 /* Top Corner */
 .topbar{
     display: none;
@@ -569,6 +502,59 @@ body.nav-active{
     opacity: 1;
     pointer-events:all;
 }
+.login{
+    position: relative;
+    padding: 10px 20px;
+    border-radius: 7px;
+    border: 1px solid #00A6FB;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 2px;
+    background: transparent;
+    color: #fff;
+    background: #00a6fb;
+    overflow: hidden;
+  }
+  
+.login:hover {
+    background: #00a6fb;
+}
+  
+.login::before {
+    content: '';
+    display: block;
+    width: 0px;
+    height: 86%;
+    position: absolute;
+    top: 7%;
+    left: 0%;
+    opacity: 0;
+  }
+  
+  @keyframes sh02 {
+    from {
+      opacity: 0;
+      left: 0%;
+    }
+  
+    50% {
+      opacity: 1;
+    }
+  
+    to {
+      opacity: 0;
+      left: 100%;
+    }
+  }
+  
+.login:active {
+    box-shadow: 0 0 0 0 transparent;
+    -webkit-transition: box-shadow 0.2s ease-in;
+    -moz-transition: box-shadow 0.2s ease-in;
+    transition: box-shadow 0.2s ease-in;
+  }
+  
 
 /* Home */
 .hero .slider-btn{
@@ -701,6 +687,8 @@ body.nav-active{
     font-size: 50px;
     top:-20px;
     position: relative;
+    color:#00a6fb;
+
 }
 .menu-container{
     padding: 50px;
@@ -735,7 +723,7 @@ body.nav-active{
     transition: 0.3s;
 }
 .menu-container .menu-link:hover{
-    color:#6DC7D1;
+    color:#00a6fb;
 }
 .menu-container .menu-items{
     display: flex;
@@ -751,49 +739,61 @@ body.nav-active{
 .menu-main{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    border: 2px solid white;
+    /* border: 2px solid white; */
     /* padding: 5px; */
     height: 800px;
     width: 1530px;
-    margin-left: 10%;
 }
 .menu-main .menu-3{
+    /* margin: 15px; */
     height: 800px;
     /* padding: 5px; */
-    width: 508px;
+    width: 500px;
 }
 .menu-main .menu-3 .menu-2-item{
-    border: 2px solid white;
+    border: 3px solid #006494;
+    margin: 15px;
+    border-radius: 20px;
     height: 300px;
-    width: 508px;
-    /* padding: 50px; */
+    width: 495px;
+    /* padding: 5px; */
 }
 .menu-main .menu-3 .menu-1-item{
-    border: 2px solid white;
+    border: 3px solid #006494;
+    border-radius: 20px;
+    margin: 15px;
     height: 500px;
-    width: 508px;
-    /* padding: 50px; */
+    width: 495px;
+    /* padding: 5px; */
 }
 
 /* Best sellers */
+.bestseller-heading{
+    font-family: "Nosifer", serif;
+    margin-top: 100px;
+    justify-content: center;
+    text-align:center;
+    align-items: center;
+    font-size: 50px;
+    top:-20px;
+    position: relative;
+}
 .best-container{
     padding: 15px;
     display: grid;
     justify-content: center;
     grid-template-columns: repeat(4, 1fr);
     gap: 10px;
-    background-image: url(ashwini-chaudhary-monty-GzvQD2RJB0s-unsplash.jpg);
-    /* background-color: rgb(18, 53, 53); */
-    margin: 0px 20px 150px 20px;
+    margin: 0px 20px 200px 20px;
     border-radius:30px;
 }
 .best-container .best-items img{
+    position: absolute;
+    top:100px;
     border-radius:30px;
     padding: 10px;
     height: 90%;
     width: 100%;
-    /* height: 220px; */
-    /* width: 365px; */
 }
 .best-container:is(:hover, :focus-visible){
     box-shadow: var(--shadow-3);
@@ -817,9 +817,9 @@ body.nav-active{
 }
 
 /* Best sellers 2 */
-.bestseller-heading{
+/* .bestseller-heading{
     font-family: "Nosifer", serif;
-    margin-top: 100px;
+    margin-top:200px;
     justify-content: center;
     text-align:center;
     align-items: center;
@@ -829,7 +829,7 @@ body.nav-active{
 }
 .container-best{
     width: 100%;
-    height: 90vh;
+    height: 65vh;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -931,30 +931,8 @@ body.nav-active{
     height: 500px;
     background-color: transparent;
     filter: saturate(100%);
-}
-
-
-/* #slider1:target ~ .imgContainer{
-    left: 60%;
-}
-#slider2:target ~ .imgContainer{
-    left: 40%;
-}
-#slider3:target ~ .imgContainer{
-    left: 20%;
-}
-#slider4:target ~ .imgContainer{
-    left: 0%;
-}
-#slider5:target ~ .imgContainer{
-    left: -20%;
-}
-#slider6:target ~ .imgContainer{
-    left: -40%;
-}
-#slider7:target ~ .imgContainer{
-    left: -60%;
 } */
+
 
 /* Offers */
 .offers-heading{
@@ -973,8 +951,8 @@ body.nav-active{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* background: #261246; */
-    margin: 0px 20px 80px 20px;
+    background: #006494;
+    margin: 0px 80px 80px 80px;
     border-radius:30px;
     text-align: center;
     font-family: "Poppins";
@@ -1118,31 +1096,6 @@ visibility: visible;
 
 /* Counters */
 
-/* .counters{
-    margin: 200px;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    margin: 0px 20px 150px 20px;
-    border-radius:30px;
-}
-.counters .counter-item{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 200px;
-    margin: 30px;
-    border-radius:30px;
-    width: 200px;
-}
-.counters .counter-item h1{
-    font-size:50px;
-    font-family: serif;
-}
-.counters .counter-item p{
-    font-size:30px;
-    font-family: serif;
-} */
-
 .counter-section {
     display: flex;
     justify-content: center;
@@ -1168,21 +1121,16 @@ visibility: visible;
 .counter {
     display: block;
     font-size: 60px;
-    color:#6DC7D1;
+    color:#00a6fb;;
     font-weight: bold;
     margin-bottom: 10px;
     font-family: "Emilys Candy", serif;
 }
 
-/* .counter-box p {
-    font-size: 1.2rem;
-    color: #666;
-} */
-
 .counter-box strong {
     font-size:30px;
     padding: 50px;
-    color:#6DC7D1;
+    color:#00a6fb;;
     font-family: "Emilys Candy", serif;
 }
 
@@ -1210,7 +1158,7 @@ visibility: visible;
     transition: 0.2s;
     animation: momentts 1s 1;
     animation-timeline: view();
-    animation-range:entry 0% cover 30%;
+    animation-range:entry 0% cover 25%;
 }
 #img-2{
     background-color: black;
@@ -1218,7 +1166,7 @@ visibility: visible;
     transition: 0.2s;
     animation: momentts2 1s 1;
     animation-timeline: view();
-    animation-range:entry 0% cover 30%;
+    animation-range:entry 0% cover 25%;
 }
 #img-2:hover{
     background-color: none;
@@ -1316,6 +1264,15 @@ visibility: visible;
 }
 
 /* Reviews */
+.review-heading{
+    font-family: "Nosifer", serif;
+    justify-content: center;
+    text-align:center;
+    align-items: center;
+    font-size: 45px;
+    margin-bottom: 90px;
+    margin-top: 50px;
+}
 .reviews-container {
     display: flex;
     justify-content: center;
@@ -1323,7 +1280,7 @@ visibility: visible;
     gap: 20px;
 }
 .review-card {
-    background: rgb(6, 6, 51);
+    background:#003554;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
@@ -1332,7 +1289,7 @@ visibility: visible;
     transition: transform 0.3s;
 }
 .review-card:hover {
-    transform: translateY(-5px);
+    transform: translateY(-10px);
 }
 .customer-info {
     display: flex;
@@ -1356,6 +1313,41 @@ visibility: visible;
 }
 
 
+/* Custom Review */
+#review-box{
+    color: white;
+    background-color: rgb(114, 110, 110);
+    height: 150px;
+    width: 300px;
+    border: 2px solid black;
+    border-radius: 2px;
+}
+
+.custom-review{
+    width: 180px;
+    height: 40px;
+    position: relative;
+    top:20px;
+    background: #00A6FB;
+    border: none;
+    border-radius: 50px;
+    color: rgb(255, 255, 255);
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    cursor: pointer;
+    box-shadow: 1px 3px 0px #0582ca;
+    transition-duration: .3s;
+}
+
+.custom-review:active {
+    transform: translate(2px ,0px);
+    box-shadow: 0px 1px 0px #0582ca;
+    padding-bottom: 1px;
+}
+
 /* Combined */
 .rate-news{
     display: grid;
@@ -1367,14 +1359,13 @@ visibility: visible;
 
 /* Rate Us */
 .rating-card {
-    width: 450px;
-    height: fit-content;
+    width: 400px;
+    height:200px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    background: #0f0c29;
-    background: linear-gradient(to right bottom, #443e89, #0f0c29);
+    background: #003554;
     padding: 20px 20px;
     border-radius: 10px;
     gap: 10px;
@@ -1438,9 +1429,11 @@ visibility: visible;
     width: 50%;
     display: flex;
     justify-content: center;
+    position: relative;
+    top:-20px;
     align-items: center;
     gap: 10px;
-    padding-top: 20px;
+    padding-top: 0px;
     border-top: 1px solid rgb(150, 150, 150);
   }
   .social-button {
@@ -1460,9 +1453,7 @@ visibility: visible;
     flex-direction: column;
     justify-content: center;
     /* align-items: center; */
-    background: #606c88;
-    background: -webkit-linear-gradient(to right, #3f4c6b, #606c88);
-    background: linear-gradient(to right, #3f4c6b, #606c88);
+    background:#003554;
     padding: 20px;
     border-radius: 10px;
     height: 200px;
@@ -1470,7 +1461,7 @@ visibility: visible;
   }
   
   .title {
-    font-size: 2rem;
+    font-size: 3rem;
     line-height: 2rem;
     font-weight: 700;
     letter-spacing: -0.025em;
@@ -1517,7 +1508,7 @@ visibility: visible;
     font-size: 0.875rem;
     line-height: 1.25rem;
     padding: 0.625rem 0.875rem;
-    background-color: rgb(99 102 241);
+    background-color: #00A6FB;
     border-radius: 0.375rem;
     border: none;
     outline: none;
@@ -1601,7 +1592,7 @@ visibility: visible;
 .footer-section h3 {
     font-size: 18px;
     margin-bottom: 10px;
-    color: #6DC7D1;
+    color: #00a6fb;;
 }
 .footer-section p, .footer-section a {
     color: #ccc;
@@ -1612,7 +1603,7 @@ visibility: visible;
     font-size: 14px;
 }
 .footer-section a:hover {
-    color: #6DC7D1;
+    color: #00a6fb;;
 }
 .social-icons {
     display: flex;
