--- a/coffee.css
+++ b/coffee.css
@@ -4,12 +4,15 @@
   --white-smoke:#F7F4F3;
   --platinum-blue:#6DC7D1;
 }
+body{
+  background-color: #051923;
+}
 .heading{
   font-size: 60px;
   font-family: "Emilys Candy", serif;
   font-weight: bold;
   text-align: center;
-  color: #6DC7D1;;
+  color: #00a6fb;
 }
 .container{
   padding: 30 0 30 30;
@@ -17,11 +20,11 @@
   grid-template-columns: repeat(4, 1fr);
 }
 .card {
-  box-shadow: 0 2px 4px 0 #6DC7D1;
+  box-shadow: 0 2px 4px 0 #00659482;
  margin: 16px;
   /* margin-bottom: 20px; */
     --main-color: #000;
-    --bg-color: #eef5f6;
+    --bg-color: #00355460;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     position: relative;
     padding: 20px;
@@ -31,12 +34,12 @@
     border-radius: 20px;
     display: flex;
     flex-direction: column;
-    border: 1px solid #6DC7D1;
+    border: 1px solid #00a6fb;
     gap: 15px;
     transition:0.3s;
   }
   .container .card:hover{
-    box-shadow: 0 5px 10px 0 #6DC7D1;
+    box-shadow: 0 5px 10px 0 #00a6fb;
   transform: scale(1.01);
   }
   
@@ -59,7 +62,7 @@
     font-weight: 600;
     font-size: 25px;
     text-align: center;
-    color: var(--main-color);
+    color: white;
   }
   
   .card .card__subtitle {
@@ -73,7 +76,7 @@
     letter-spacing: 0.5px;
   }
   .card .description{
-    color:black;
+    color:gray;
     font-size: 13px;
     display: flex;
     justify-content: center;
@@ -81,7 +84,7 @@
   .card__price {
     font-weight: 600;
     font-size: 22px;
-    color:#6DC7D1;
+    color:#00a6fb;
   }
   
   .card__counter {
@@ -115,7 +118,7 @@
 .button {
   --width: 100px;
   --height: 35px;
-  --button-color: #6DC7D1;
+  --button-color: #00a6fb;
   --tooltip-color: #fff;
   width: var(--width);
   height: var(--height);
@@ -129,6 +132,7 @@
 
 .button::after,.button::before {
   opacity: 0;
+  --button-color: #00a6fb;
   visibility: hidden;
   transition: all 0.5s;
 }
@@ -170,7 +174,7 @@
 }
 
 .button:hover {
-  background: #6DC7D1;
+  background: #00a6fb;
 }
 
 .button:hover .text {
